--- a/paginas/Games.phtml
+++ b/paginas/Games.phtml
@@ -47,7 +47,7 @@ foreach ($produtosInfo as $produto) {
         echo '<div class="imagem">';
         // Verifica se a foto está disponível ou usa uma imagem padrão
         $foto = isset($produto->foto) && !empty($produto->foto) ? $produto->foto : 'imagens/default.png';
-        echo '<img src="' . $foto . '" alt="Imagem do produto">';
+        echo '<img src="paginas/validacoes/item/' . $foto . '" alt="Imagem do produto">';
         echo '</div>';
         echo '<div class="descricao">';
         // Exibe o nome do produto
