--- a/paginas/login.phtml
+++ b/paginas/login.phtml
@@ -5,7 +5,7 @@
 
         <h2>ENTRAR COM UMA CONTAR TECNOLO</h2>
 
-        <form method="POST" action="login.php" class="form">
+        <form method="POST" action="home" class="formlogin form">
 
             <input type="email" class="required" id="email" name="email" placeholder="E-mail" required >
             <span class="span-required" style="margin: 10px 0 0 10px; color:red; display: none;">E-mail inválido</span>
@@ -29,3 +29,4 @@
         <a href="login"><i class="bi bi-facebook"></i>Facebook</a>
     </div>
 </section>
+
