--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -134,7 +134,7 @@ foreach ($dadosApi as $produto) {
                             <input type="text" name="atributo_5Post" placeholder="Atributo 5 Produto" required>
                             <input type="text" name="atributo_6Post" placeholder="Atributo 6 Produto" required>
                             <input type="number" name="id_categoriaPost" placeholder="Id Categoria" required>
-                            <input type="file" id="fotoProduto" name="fotoPost" accept="image/*" />
+                            <input type="file"  id="fotoProduto" name="fotoPost" accept="image/*" />
 
 
                             <div class="p_btn">
@@ -190,7 +190,7 @@ foreach ($dadosApi as $produto) {
         </div>
 
         <a href="pedidos" class="conteiner_link">
-            <p>Peditos</p>
+            <p>Pedidos</p>
             <div class="logo">
                 <i class="bi bi-cart-fill"></i>
             </div>
